cambie color barra de navegacion

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 /* Estilos para la barra de navegación */
 nav a {
-    color: black;
+    color: rgb(209, 5, 5);
     text-decoration: none;
     margin: 0 15px;
     font-weight: bold;
