--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav a:hover {
     width: 90%;
     margin: 20px auto;
     padding: 15px;
-    background-color: #f4f4f4;
+    background-color: #b35c99;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(128, 5, 56, 0.1);
 }
