actualizar color fondo

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav a:hover {
     width: 90%;
     margin: 20px auto;
     padding: 15px;
-    background-color: #b35c99;
+    background-color: #d1b7c9;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(173, 173, 172, 0.1);
 }
