--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav a:hover {
 
 /* Estilos para el pie de página */
 footer {
-    background-color: #5918c0;
+    background-color: #cecbd4;
     color: rgb(109, 33, 33);
     text-align: center;
     padding: 10px 0;
